[package]
name = "take_home"
version = "0.1.0"
authors = ["Adam Trabelsi <at1197@scarletmail.rutgers.edu>"]
edition = "2021"
rust-version = "1.63"

[dependencies]
eframe = {version="0.19.0", features = ["persistence"]}
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
cron = "0.12.0"
chrono = {version= "0.4", features = ["serde"]}
uuid = {version = "1.2.1", features = ["v4", "fast-rng", "serde"]}